feat: 新增审核系统能力与配置优化，增强文件处理与AI体验**
- 重构 LLM 自动审核体系，完善文本/图像/分块审核能力，并补充相关实体、枚举与 DTO
- 扩展内容类型与审核范围，新增个人资料审核支持
- 将风险标签生成并入审核任务流程，统一审核链路
- 重构 AI 提示词配置，统一通过 `promptCode` 管理
- 新增审核队列批量重入、手动摘要等运维能力
- 新增内容安全熔断与依赖熔断能力，提升系统稳定性
- 将“置信回退机制页面”升级为“审核策略配置页面”

- 新增图片上传管理、文件传输列表、帖子文件解析状态列表与格式管理页面
- 支持帖子保存草稿时持久化文件传输进度
- 修复审核帖子时无法查看帖子文件内容的问题
- 新增搜索可命中帖子文件内容的能力

- 新增与 LLM 对话的上下文压缩功能
- 新增 qwen3.5 模型支持
- 修复 AI 发帖助手输出 Markdown 识别异常问题
- 扩展用户偏好设置，新增标题/标签生成计数
- 新增前端审核通知类型

- 优化更换邮箱与启用 TOTP 场景下的 UI 交互
- 新增关闭注册功能
- 修复语言工具函数边界条件处理问题
- 重构部分 SQL 表设计并优化相关配置
- 优化构建配置：排除测试文件并更新 Gradle JVM 参数
- 测试基础设施由嵌入式 MariaDB 迁移至 MySQL 容器
- 补充多项分支测试并覆盖关键改动路径